# routes/user.go
@@ -17,5 +17,8 @@ func UserRoutes(router *gin.Engine, client *mongo.Client) {
 	{
 		userRoutes.POST("/", userController.CreateUser)
 		userRoutes.GET("/", userController.GetUsers)
+		userRoutes.GET("/profile", userController.GetProfile)
+		userRoutes.GET("/addresses", userController.GetUserAddresses)
+		userRoutes.POST("/addresses", userController.AddUserAddresses)
 	}
 }
